@@ -1,17 +1,21 @@
 package com.swack.hcs.controller;
 
-import com.swack.hcs.bean.Room;
-import com.swack.hcs.bean.UserData;
-import com.swack.hcs.service.LoginService;
-import com.swack.hcs.service.RoomService;
-import com.swack.hcs.util.AppConstants;
-import com.swack.hcs.util.Loggable;
+import java.util.List;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestParam;
+
+import com.swack.hcs.bean.Room;
+import com.swack.hcs.bean.UserData;
+import com.swack.hcs.service.LoginService;
+import com.swack.hcs.service.RoomService;
+import com.swack.hcs.util.AppConstants;
+import com.swack.hcs.util.Loggable;
+
 
 /**
  * 部屋作成コントローラ.
@@ -32,66 +36,55 @@ public class CreateRoomController implements Loggable {
    * @return 部屋作成画面
    */
   @GetMapping("/createroom")
-  public String get() {
-    if (!isAdminLogined()) {
-      log().warn("[createroom:get]管理者権限が無い状態で部屋作成画面にアクセスされました。");
+  public String get(Model model) {
+    if (!isAdmin()) {
+      // 管理者でない場合はアクセス拒否
       return "redirect:/login";
     }
-
+    String userId = loginService.getLoginedUserId();
+    List<UserData> users = roomService.getUsers(userId);
+    model.addAttribute("users", users);
     return "createroom";
   }
 
   /**
    * 部屋作成処理.
    *
-   * @param roomName ルーム名
-   * @param privated 非公開ルームかどうか
-   * @param model    モデル
-   * @return 遷移先
+   * @param roomName 部屋名
+   * @param privated 非公開フラグ
+   * @param model   モデル
+   * @return 部屋作成後のリダイレクト先
    */
   @PostMapping("/createroom")
-  public String post(@RequestParam(name = "roomName") String roomName,
+  public String post(@RequestParam("roomName") String roomName,
       @RequestParam(name = "privated", required = false, defaultValue = "false") boolean privated,
-      Model model) {
-    log().info("[createroom:post]roomName:" + roomName);
-
-    if (!isAdminLogined()) {
-      log().warn("[createroom:post]管理者権限が無い状態で部屋作成が試行されました。");
-      return "redirect:/login";
-    }
-
-    // 単項目チェック(空欄・文字数)
-    if (roomName == null || roomName.isBlank() || roomName.length() > 50) {
-      model.addAttribute("errorMsg", AppConstants.MSG_ERR_USERS_PARAM_MISTAKE);
+      @RequestParam(name = "inviteUserIds", required = false) List<String> inviteUserIds, Model model) {
+    if (roomName == null || roomName.trim().isEmpty() || roomName.length() > 50) {
+      model.addAttribute("errorMessage", AppConstants.MSG_ERR_USERS_PARAM_MISTAKE);
       return "createroom";
     }
-
-    // ルーム名の重複チェック
-    if (roomService.isRegistered(roomName)) {
-      model.addAttribute("errorMsg", AppConstants.MSG_ERR_ROOM_ISREGISTERED);
+    if (roomService.isRoomNameExists(roomName)) {
+      model.addAttribute("errorMessage", AppConstants.MSG_ERR_ROOM_ISREGISTERED);
       return "createroom";
     }
-
     String userId = loginService.getLoginedUserId();
-
-    Room createdRoom = roomService.createRoom(roomName, userId, privated);
-    log().info("[createroom:post]roomId:" + createdRoom.roomId());
-
-    return "redirect:/?roomId=" + createdRoom.roomId();
+    Room room = roomService.createRoom(roomName, privated, userId);
+    if (inviteUserIds != null && !inviteUserIds.isEmpty()) {
+      roomService.inviteUsers(room.roomId(), inviteUserIds);
+    }
+    return "redirect:/?roomId=" + room.roomId();
   }
 
   /**
-   * ログイン中かつ管理者権限を持っているか判定する.
-   *
-   * @return ログイン中かつ管理者の場合はtrue
+   * 管理者かどうかを判定する.
+   * @return 管理者の場合はtrue、それ以外はfalse
    */
-  private boolean isAdminLogined() {
-    if (!loginService.isLogin()) {
+  private boolean isAdmin() {
+    UserData userData = loginService.getLoginedUserInfo();
+    if (userData == null) {
       return false;
     }
-
-    UserData userData = loginService.getLoginedUserInfo();
-    return userData != null && userData.isAdmin();
+    return userData.isAdmin();
   }
 
 }
